--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@material-ui/icons": "^4.2.1",
     "auth0-js": "^9.11.1",
     "axios": "^0.19.0",
+    "fs": "^0.0.1-security",
     "fuse.js": "^3.4.5",
     "jwt-decode": "^2.2.0",
     "react": "^16.8.6",
